--- a/rails_root/app/views/layouts/application.html.erb
+++ b/rails_root/app/views/layouts/application.html.erb
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsRoot</title>
+  <title>TRSS</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
 
-<%= yield %>
+<div class='wrap_all'>
+	<div class='header'>
+		<div class='title'>登录TRSS</div>
+		
+		<div class='header_nav'>
+			<ul>
+			<% if user_signed_in? %>
+			  <li>
+			  <%= link_to('Logout', destroy_user_session_path, :method => 'delete') %>        
+			  </li>
+			<% else %>
+			  <li>
+			  <%= link_to('Login', new_user_session_path)  %>  
+			  </li>
+			<% end %>
+			</ul>
+		</div>
+	</div>
+	
+	<div class='clear' />
+	
+	<%= yield %>
+</div>
 
 </body>
 </html>
