--- a/rails_root/app/views/layouts/application.html.erb
+++ b/rails_root/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TRSS</title>
+  <title>TRSS | 将任意RSS同步到新浪微博</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
@@ -10,20 +10,29 @@
 
 <div class='wrap_all'>
 	<div class='header'>
-		<div class='title'>登录TRSS</div>
+		<div class='title'>
+			<h1>
+				<a title="Dashboard" href="/" class="logo_box_nerd_shit">
+					<div class="even_nerdier_shit"></div>
+				</a>
+				
+				TRSS / <%= yield :title %>
+			</h1>
+			<div class="clear"></div>
+		</div>
 		
-		<div class='header_nav'>
-			<ul>
-			<% if user_signed_in? %>
-			  <li>
-			  <%= link_to('Logout', destroy_user_session_path, :method => 'delete') %>        
-			  </li>
-			<% else %>
-			  <li>
-			  <%= link_to('Login', new_user_session_path)  %>  
-			  </li>
-			<% end %>
-			</ul>
+		<div class='nav_right_side'>
+			<div class='header_nav'>
+				<% if user_signed_in? %>
+				  <%= link_to('登出', destroy_user_session_path, :method => 'delete') %>        
+				<% else %>
+					<% if(controller_name == 'registrations') %>
+						<%= link_to('登录', new_user_session_path) %>
+					<% else %>
+				  		<%= link_to('注册', new_user_registration_path) %>  
+					<% end %>
+				<% end %>
+			</div>
 		</div>
 	</div>
 	
