--- a/rails_root/app/views/devise/registrations/new.html.erb
+++ b/rails_root/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,16 @@
-<h2>Sign up</h2>
+<%= title '注册' %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
-  <%= f.email_field :email %></p>
+  <div><%= f.label :email, 'Email地址' %><br />
+  <%= f.email_field :email, :size => 20 %></div>
 
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
+  <div><%= f.label :password, '密码' %><br />
+  <%= f.password_field :password, :size => 20 %></div>
 
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
+  <div><%= f.label :password_confirmation, '确认密码' %><br />
+  <%= f.password_field :password_confirmation, :size => 20 %></div>
 
-  <p><%= f.submit "Sign up" %></p>
+  <p><%= f.submit "注册" %></p>
 <% end %>
-
-<%= render :partial => "devise/shared/links" %>
