--- a/rails_root/app/views/feeds/index.html.erb
+++ b/rails_root/app/views/feeds/index.html.erb
@@ -6,5 +6,5 @@
 <% end %>
 
 <ul>
-	<%= render :partial => 'feed', :collection => current_user.feeds %>
+	<%= render :partial => 'feed', :collection => current_user.active_feeds %>
 </ul>
