show fetched items in trss site

--- a/rails_root/app/views/layouts/application.html.erb
+++ b/rails_root/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 					<div class="even_nerdier_shit"></div>
 				</a>
 				
-				TRSS / <%= yield :title %>
+				<%= link_to 'TRSS', root_path %> / <%= yield :title %>
 			</h1>
 			<div class="clear"></div>
 		</div>
