--- a/rails_root/public/stylesheets/trss.css
+++ b/rails_root/public/stylesheets/trss.css
@@ -10,7 +10,6 @@ body {
 }
 
 .title h1 {
-	color: #333333;
     float: left;
     font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2",Georgia;
     font-size: 60px;
@@ -19,6 +18,10 @@ body {
     line-height: 1;
     margin: 0;
     padding: 8px 4px 10px 0;
+}
+
+.title h1 a {
+	color: #333;
 }
 
 .title h1 .logo_box_nerd_shit {
@@ -153,4 +156,35 @@ input[type="checkbox"] {
 
 .checkbox_container {
 	margin-top: 20px;
+}
+
+ul li {
+	list-style: none;
+	margin: 10px;
+}
+
+ul li .feed_title {
+	font-size: 1.2em;
+	font-style: bold;
+}
+
+dl {
+	margin: 30px;
+}
+
+dl dt h3 {
+	margin-bottom: 3px;
+}
+
+dl dt a {
+	color: #333;
+}
+
+dl dd {
+	margin-left: 5px;
+}
+
+dl dd .feed_item_info {
+	color: #999;
+	font-size: 12px;
 }
