--- a/rails_root/app/views/layouts/application.html.erb
+++ b/rails_root/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>TRSS | 将任意RSS同步到新浪微博</title>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
